# file-save-syncer

./: .gitignore  README.md  alvault.spec  alvault_entry.py  pyproject.toml  windrose.spec  windrose_entry.py
src/alvault/cli/: __init__.py  _world_utils.py  add_world_cmd.py  init_cmd.py  invite_cmd.py  join_cmd.py  launch_cmd.py  list_worlds_cmd.py  pull_cmd.py  push_cmd.py  set_mods_cmd.py  set_save_cmd.py  status_cmd.py
src/alvault/config/: manager.py  paths.py
src/alvault/drive/: auth.py  client.py
src/alvault/launcher/: game.py
src/alvault/sync/: engine.py
src/alvault/tray/: icon.py
src/windrose/cli/: __init__.py  _world_utils.py  add_world_cmd.py  init_cmd.py  invite_cmd.py  join_cmd.py  launch_cmd.py  list_worlds_cmd.py  pull_cmd.py  push_cmd.py  set_mods_cmd.py  set_save_cmd.py  status_cmd.py
src/windrose/config/: manager.py  paths.py
src/windrose/data/: client_secret.json
src/windrose/drive/: auth.py  client.py
src/windrose/launcher/: game.py
src/windrose/mods/: manager.py
src/windrose/sync/: engine.py
src/windrose/tray/: icon.py
tests/: conftest.py  test_config.py  test_drive_client.py  test_launcher.py  test_sync_engine.py
