[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "windrose"
version = "0.1.0"
description = "Game save sync to Google Drive for Windrose"
requires-python = ">=3.9"
dependencies = [
    "typer[all]>=0.23.2",
    "pystray>=0.19.5",
    "Pillow>=11.2.1",
    "google-api-python-client>=2.194.0",
    "google-auth>=2.49.0",
    "google-auth-oauthlib>=1.3.1",
    "tomli>=2.4.1; python_version < '3.11'",
    "tomli-w>=1.2.0",
]

[project.scripts]
windrose-save-sync = "windrose.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
    "mypy>=1.19.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/windrose"]
artifacts = ["src/windrose/data/client_secret.json"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
